# conjugador

./: .gitlab-ci.yml  DEV.md  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
definitions/: definitions.py  extract-to-json.py  textextract.py
definitions/test/: testdefinitions.py  testtextextract.py
docker/: dockerfile  entrypoint.sh
docker/elasticsearch/: Dockerfile
docker/webserver/: Dockerfile
extractor/: diacritics.py  dictionaryfile.py  exclusionsfile.py  extract.py  forms.py  notes.json  notes.py  reflexius.py
extractor/test/: testdiacritics.py  testdictionaryfile.py  testexclusionsfile.py  testextractor.py  testnotes.py  testreflexius.py
extractor/test/data/: signatures.txt
extractor/test/output/an/: anar - auxiliar.json
extractor/test/output/se/: ser.json
indexer/: autocomplete.py  findfiles.py  firstletter.py  index.py  index_creation.py  indexcreator.py  indexletter.py  search.py
indexer/indices/: autocomplete.py  base.py  errors.py  letter.py  search.py
web/: usage.py  web_search.py
web/models/: autocomplete.py  base.py  indexletter.py  search.py  searchbase.py
